@@ -2,6 +2,7 @@ Changes
 examples/create_and_print_value_globecoordinate.pl
 examples/create_and_print_value_item.pl
 examples/create_and_print_value_monolingual.pl
+examples/create_and_print_value_property.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
